Added tests for registration

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,5 @@
 markers =
     smoke: marker for smoke tests
     regression: marker for regression tests
+    positive: marker for tests with positive scenario
     negative: marker for tests with negative scenario
